@@ -1,3 +1,5 @@
+# influencePlot.R
+
 # changed point marking, 25 November 2009 by S. Weisberg
 #  deleted the cutoff for Cook's D, and the coloring of the circles
 #  inserted default labeling of the id.n largest Cook D.
@@ -11,6 +13,7 @@
 # 2017-02-12: consolidated id argument. J. Fox
 # 2017-11-30: substitute carPalette() for palette(). J. Fox
 # 2019-01-02: added lmerMod method. J. Fox
+# 2022-09-21: Fill the bubble points by default. M. Friendly & J. Fox
 
 # moved from Rcmdr 5 December 2006
 
@@ -20,7 +23,9 @@ influencePlot <- function(model, ...){
 
 influencePlot.lm <- function(model, scale=10,  
                              xlab="Hat-Values", ylab="Studentized Residuals",
-                             id=TRUE, ...){
+                             id=TRUE, 
+                             fill=TRUE, fill.col=carPalette()[2], fill.alpha=0.5,
+                             ...){
     id <- applyDefaults(id, defaults=list(method="noteworthy", n=2, cex=1, col=carPalette()[1], location="lr"), type="id")
     if (isFALSE(id)){
         id.n <- 0
@@ -44,10 +49,14 @@ influencePlot.lm <- function(model, scale=10,
     scale <- scale/max(cook, na.rm=TRUE)
     p <- length(coef(model))
     n <- sum(!is.na(rstud))
-    plot(hatval, rstud, xlab=xlab, ylab=ylab, type='n', ...)
+    plot(hatval, rstud, xlab=xlab, ylab=ylab, type="n", ...) 
     abline(v=c(2, 3)*p/n, lty=2)
     abline(h=c(-2, 0, 2), lty=2)
-    points(hatval, rstud, cex=scale*cook, ...)
+    points(hatval, rstud, cex=scale*cook, ...) 
+    if (fill) {
+      cols <- scales::alpha(fill.col, alpha=fill.alpha*(cook/max(cook)))
+      points(hatval, rstud, cex=scale*cook, col=cols, pch=16)  
+      }
     if(id.method == "noteworthy"){
         which.rstud <- order(abs(rstud), decreasing=TRUE)[1:id.n]
         which.cook <- order(cook, decreasing=TRUE)[1:id.n]
